add a few blocks

--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -6,8 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Forex24 Global</title>
   <link rel="stylesheet" href="css/style.min.css">
-  <!-- Favicon -->
-  <link rel="manifest" href="site.webmanifest">
 </head>
 <body>
   <section class="title">
@@ -45,7 +43,90 @@
   <section class="welcome">
     <div class="container">
       <div class="welcome__flex">
-        
+        <img src="img/welcome-mockup.png" alt="Mockup">
+        <div class="welcome__content">
+          <h1 class="welcome__name">Welcome to <span>Forex24</span></h1>
+          <b class="welcome__sub-name">Your home for online Forex and CFD trading</b>
+          <p class="welcome__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem.</p>
+          <a class="welcome__button" href="#">Create account</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="edge">
+    <div class="container">
+      <div class="edge__flex">
+        <div class="edge__box">
+          <b>70</b>
+          <p>currency pairs,<br>indices &<br>commodities</p>
+        </div>
+        <div class="edge__box">
+          <b>0.0</b>
+          <p>spreads<br>from</p>
+        </div>
+        <div class="edge__box">
+          <b>500:1</b>
+          <p>leverage<br>up to</p>
+        </div>
+        <div class="edge__box">
+          <b>$200</b>
+          <p>minimum<br>deposit</p>
+        </div>
+        <div class="edge__box">
+          <b>$0</b>
+          <p>account<br>fees</p>
+        </div>
+        <div class="edge__box">
+          <b>15</b>
+          <p>Trading<br>Platforms</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="account">
+    <div class="container">
+      <h1 class="account__name">Join a Global Award-Winning Forex Broker</h1>
+      <div class="account__flex">
+        <div class="account__box">
+          <h2>Zulutrade</h2>
+            <hr>
+          <b>Sosial trading platform</b>
+          <ul>
+            <li>$1,000,000 Free Demo Account</li>
+            <li>Step-by-step tutorials & articles</li>
+            <li>Online webinars & local seminars</li>
+            <li>One-to-one support in 16 languages</li>
+            <li>Your own Account Manager</li>
+          </ul>
+          <a href="#">Create account</a>
+        </div>
+        <div class="account__box">
+          <h2>Real account</h2>
+            <hr>
+          <b>Start live trading</b>
+          <ul>
+            <li>Tight spreads from 0 pips*</li>
+            <li>Up to 1:1000 leverage* *</li>
+            <li>Superfast trade execution</li>
+            <li>Hi-tech Forex trading tools</li>
+            <li>Ultimate risk protection & security</li>
+            <li>* depending on account type</li>
+          </ul>
+          <a href="#">Create account</a>
+        </div>
+        <div class="account__box">
+          <h2>Demo account</h2>
+            <hr>
+          <b>Start practicing for free</b>
+          <ul>
+            <li>No hidden fees</li>
+            <li>Low minimum deposit</li>
+            <li>Full control of your Investment Account</li>
+            <li>Quick deposits and withdrawals</li>
+            <li>Simple, flexible and secure</li>
+          </ul>
+          <a href="#">Create account</a>
+        </div>
       </div>
     </div>
   </section>
