--- a/mb/index.html
+++ b/mb/index.html
@@ -109,7 +109,7 @@
               <p class="price__name  price__name--bitcoin">Bitcoin</p>
               <p class="price__value  price__value--bitcoin">8943.2377024$</p>
             </div>
-            <div class="price__flex  price__flex--sub">
+            <!-- <div class="price__flex  price__flex--sub">
               <div>
                 <p class="price__name  price__name--bitcoin">Bitcoin</p>
                 <p class="price__value  price__value--bitcoin">8943.2377024$</p>
@@ -122,7 +122,7 @@
                 <p class="price__name  price__name--tesla">Tesla</p>
                 <p class="price__value  price__value--tesla">8943.2377024$</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -368,8 +368,10 @@
         <div class="footer__right">
           <p>Управление и платежный агент сайта http://masterbinary.ru компания Kurbanas UAB, регистрационный номер 304404840, местонахождение : 60 Laisves ave., Vilnius, m. sav, Lithuania.</p>
           <p>Компания TGI Intelligent Solution LTD а также сайт http://masterbinary.ru не оказывают какие-либо услуг гражданам и жителям США, Канады, Австралии, Бельгии, Франции, Турции, Израиля, Сирии, Судана, Ирана, Северной Кореи Японии, а также других стран и юрисдикций, где указанные услуг не могут быть оказаны в силу действующего законодательства.</p>
-          <a class="footer__appstore" href="#"></a>
-          <a class="footer__googleplay" href="#"></a>
+          <div class="footer__store">
+            <a class="footer__appstore" href="#"></a>
+            <a class="footer__googleplay" href="#"></a>
+          </div>
           <div class="footer__social">
             <a class="footer__fb" href="#"></a>
             <a class="footer__tw" href="#"></a>
