--- a/mb/index.html
+++ b/mb/index.html
@@ -91,12 +91,12 @@
         <hr>
       <div class="counter__flex">
         <div class="counter__client">
-          <span>21 230</span> 
+          <span>4 560</span> 
           <p>Зарегистрированных<br>клиентов</p>
         </div>
           <hr>
         <div class="counter__transactions">
-          <span>23 871 318$</span> 
+          <span>556 520$</span> 
           <p>Общий объем<br>транзакций</p>
         </div>
       </div>
@@ -409,6 +409,7 @@
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/mobile-menu.js"></script>
+  <script src="js/counter.js"></script>
   <script src="js/range.js"></script>
   <!-- <script src="js/time.js"></script> -->
 </body>
