--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -129,5 +129,371 @@
       </div>
     </div>
   </section>
+  <section class="tabs">
+    <div class="container">
+      <div class="tabs__flex">
+        <img class="tabs__mockup" src="img/tabs-mockup.png" alt="Mockup">
+        <div class="tabs__inner">
+          <ul class="tabs__control">
+            <li><button>PC</button></li>
+            <li><button>Mac</button></li>
+            <li><button>Web Trader</button></li>
+            <li><button class="tabs__active">Android</button></li>
+            <li><button>Iphone/Ipad</button></li>
+          </ul>
+          <div class="tabs__content">
+            <b class="tabs__name">MetaTrader 4 for Android</b>
+            <p class="tabs__text">Get the MetaTrader 4 trading software for your smartphone or tablet and access Vipro markets’ best trading conditions anytime and anywhere!</p>
+            <a class="tabs__download" href="#">Download</a>
+            <a class="tabs__more" href="#">Read more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="form">
+    <div class="container">
+      <form method="post">
+        <p>Fast & Easy Account Opening</p>
+        <b>Start Now!</b>
+        <hr>
+        <input type="text" name="First Name" placeholder="First Name">
+        <input type="text" name="Last Name" placeholder="Last Name">
+        <select name="Country">
+          <option hidden>Country</option>
+          <option value="AF">Afghanistan</option>
+        	<option value="AX">Åland Islands</option>
+        	<option value="AL">Albania</option>
+        	<option value="DZ">Algeria</option>
+        	<option value="AS">American Samoa</option>
+        	<option value="AD">Andorra</option>
+        	<option value="AO">Angola</option>
+        	<option value="AI">Anguilla</option>
+        	<option value="AQ">Antarctica</option>
+        	<option value="AG">Antigua and Barbuda</option>
+        	<option value="AR">Argentina</option>
+        	<option value="AM">Armenia</option>
+        	<option value="AW">Aruba</option>
+        	<option value="AU">Australia</option>
+        	<option value="AT">Austria</option>
+        	<option value="AZ">Azerbaijan</option>
+        	<option value="BS">Bahamas</option>
+        	<option value="BH">Bahrain</option>
+        	<option value="BD">Bangladesh</option>
+        	<option value="BB">Barbados</option>
+        	<option value="BY">Belarus</option>
+        	<option value="BE">Belgium</option>
+        	<option value="BZ">Belize</option>
+        	<option value="BJ">Benin</option>
+        	<option value="BM">Bermuda</option>
+        	<option value="BT">Bhutan</option>
+        	<option value="BO">Bolivia, Plurinational State of</option>
+        	<option value="BQ">Bonaire, Sint Eustatius and Saba</option>
+        	<option value="BA">Bosnia and Herzegovina</option>
+        	<option value="BW">Botswana</option>
+        	<option value="BV">Bouvet Island</option>
+        	<option value="BR">Brazil</option>
+        	<option value="IO">British Indian Ocean Territory</option>
+        	<option value="BN">Brunei Darussalam</option>
+        	<option value="BG">Bulgaria</option>
+        	<option value="BF">Burkina Faso</option>
+        	<option value="BI">Burundi</option>
+        	<option value="KH">Cambodia</option>
+        	<option value="CM">Cameroon</option>
+        	<option value="CA">Canada</option>
+        	<option value="CV">Cape Verde</option>
+        	<option value="KY">Cayman Islands</option>
+        	<option value="CF">Central African Republic</option>
+        	<option value="TD">Chad</option>
+        	<option value="CL">Chile</option>
+        	<option value="CN">China</option>
+        	<option value="CX">Christmas Island</option>
+        	<option value="CC">Cocos (Keeling) Islands</option>
+        	<option value="CO">Colombia</option>
+        	<option value="KM">Comoros</option>
+        	<option value="CG">Congo</option>
+        	<option value="CD">Congo, the Democratic Republic of the</option>
+        	<option value="CK">Cook Islands</option>
+        	<option value="CR">Costa Rica</option>
+        	<option value="CI">Côte d'Ivoire</option>
+        	<option value="HR">Croatia</option>
+        	<option value="CU">Cuba</option>
+        	<option value="CW">Curaçao</option>
+        	<option value="CY">Cyprus</option>
+        	<option value="CZ">Czech Republic</option>
+        	<option value="DK">Denmark</option>
+        	<option value="DJ">Djibouti</option>
+        	<option value="DM">Dominica</option>
+        	<option value="DO">Dominican Republic</option>
+        	<option value="EC">Ecuador</option>
+        	<option value="EG">Egypt</option>
+        	<option value="SV">El Salvador</option>
+        	<option value="GQ">Equatorial Guinea</option>
+        	<option value="ER">Eritrea</option>
+        	<option value="EE">Estonia</option>
+        	<option value="ET">Ethiopia</option>
+        	<option value="FK">Falkland Islands (Malvinas)</option>
+        	<option value="FO">Faroe Islands</option>
+        	<option value="FJ">Fiji</option>
+        	<option value="FI">Finland</option>
+        	<option value="FR">France</option>
+        	<option value="GF">French Guiana</option>
+        	<option value="PF">French Polynesia</option>
+        	<option value="TF">French Southern Territories</option>
+        	<option value="GA">Gabon</option>
+        	<option value="GM">Gambia</option>
+        	<option value="GE">Georgia</option>
+        	<option value="DE">Germany</option>
+        	<option value="GH">Ghana</option>
+        	<option value="GI">Gibraltar</option>
+        	<option value="GR">Greece</option>
+        	<option value="GL">Greenland</option>
+        	<option value="GD">Grenada</option>
+        	<option value="GP">Guadeloupe</option>
+        	<option value="GU">Guam</option>
+        	<option value="GT">Guatemala</option>
+        	<option value="GG">Guernsey</option>
+        	<option value="GN">Guinea</option>
+        	<option value="GW">Guinea-Bissau</option>
+        	<option value="GY">Guyana</option>
+        	<option value="HT">Haiti</option>
+        	<option value="HM">Heard Island and McDonald Islands</option>
+        	<option value="VA">Holy See (Vatican City State)</option>
+        	<option value="HN">Honduras</option>
+        	<option value="HK">Hong Kong</option>
+        	<option value="HU">Hungary</option>
+        	<option value="IS">Iceland</option>
+        	<option value="IN">India</option>
+        	<option value="ID">Indonesia</option>
+        	<option value="IR">Iran, Islamic Republic of</option>
+        	<option value="IQ">Iraq</option>
+        	<option value="IE">Ireland</option>
+        	<option value="IM">Isle of Man</option>
+        	<option value="IL">Israel</option>
+        	<option value="IT">Italy</option>
+        	<option value="JM">Jamaica</option>
+        	<option value="JP">Japan</option>
+        	<option value="JE">Jersey</option>
+        	<option value="JO">Jordan</option>
+        	<option value="KZ">Kazakhstan</option>
+        	<option value="KE">Kenya</option>
+        	<option value="KI">Kiribati</option>
+        	<option value="KP">Korea, Democratic People's Republic of</option>
+        	<option value="KR">Korea, Republic of</option>
+        	<option value="KW">Kuwait</option>
+        	<option value="KG">Kyrgyzstan</option>
+        	<option value="LA">Lao People's Democratic Republic</option>
+        	<option value="LV">Latvia</option>
+        	<option value="LB">Lebanon</option>
+        	<option value="LS">Lesotho</option>
+        	<option value="LR">Liberia</option>
+        	<option value="LY">Libya</option>
+        	<option value="LI">Liechtenstein</option>
+        	<option value="LT">Lithuania</option>
+        	<option value="LU">Luxembourg</option>
+        	<option value="MO">Macao</option>
+        	<option value="MK">Macedonia, the former Yugoslav Republic of</option>
+        	<option value="MG">Madagascar</option>
+        	<option value="MW">Malawi</option>
+        	<option value="MY">Malaysia</option>
+        	<option value="MV">Maldives</option>
+        	<option value="ML">Mali</option>
+        	<option value="MT">Malta</option>
+        	<option value="MH">Marshall Islands</option>
+        	<option value="MQ">Martinique</option>
+        	<option value="MR">Mauritania</option>
+        	<option value="MU">Mauritius</option>
+        	<option value="YT">Mayotte</option>
+        	<option value="MX">Mexico</option>
+        	<option value="FM">Micronesia, Federated States of</option>
+        	<option value="MD">Moldova, Republic of</option>
+        	<option value="MC">Monaco</option>
+        	<option value="MN">Mongolia</option>
+        	<option value="ME">Montenegro</option>
+        	<option value="MS">Montserrat</option>
+        	<option value="MA">Morocco</option>
+        	<option value="MZ">Mozambique</option>
+        	<option value="MM">Myanmar</option>
+        	<option value="NA">Namibia</option>
+        	<option value="NR">Nauru</option>
+        	<option value="NP">Nepal</option>
+        	<option value="NL">Netherlands</option>
+        	<option value="NC">New Caledonia</option>
+        	<option value="NZ">New Zealand</option>
+        	<option value="NI">Nicaragua</option>
+        	<option value="NE">Niger</option>
+        	<option value="NG">Nigeria</option>
+        	<option value="NU">Niue</option>
+        	<option value="NF">Norfolk Island</option>
+        	<option value="MP">Northern Mariana Islands</option>
+        	<option value="NO">Norway</option>
+        	<option value="OM">Oman</option>
+        	<option value="PK">Pakistan</option>
+        	<option value="PW">Palau</option>
+        	<option value="PS">Palestinian Territory, Occupied</option>
+        	<option value="PA">Panama</option>
+        	<option value="PG">Papua New Guinea</option>
+        	<option value="PY">Paraguay</option>
+        	<option value="PE">Peru</option>
+        	<option value="PH">Philippines</option>
+        	<option value="PN">Pitcairn</option>
+        	<option value="PL">Poland</option>
+        	<option value="PT">Portugal</option>
+        	<option value="PR">Puerto Rico</option>
+        	<option value="QA">Qatar</option>
+        	<option value="RE">Réunion</option>
+        	<option value="RO">Romania</option>
+        	<option value="RU">Russian Federation</option>
+        	<option value="RW">Rwanda</option>
+        	<option value="BL">Saint Barthélemy</option>
+        	<option value="SH">Saint Helena, Ascension and Tristan da Cunha</option>
+        	<option value="KN">Saint Kitts and Nevis</option>
+        	<option value="LC">Saint Lucia</option>
+        	<option value="MF">Saint Martin (French part)</option>
+        	<option value="PM">Saint Pierre and Miquelon</option>
+        	<option value="VC">Saint Vincent and the Grenadines</option>
+        	<option value="WS">Samoa</option>
+        	<option value="SM">San Marino</option>
+        	<option value="ST">Sao Tome and Principe</option>
+        	<option value="SA">Saudi Arabia</option>
+        	<option value="SN">Senegal</option>
+        	<option value="RS">Serbia</option>
+        	<option value="SC">Seychelles</option>
+        	<option value="SL">Sierra Leone</option>
+        	<option value="SG">Singapore</option>
+        	<option value="SX">Sint Maarten (Dutch part)</option>
+        	<option value="SK">Slovakia</option>
+        	<option value="SI">Slovenia</option>
+        	<option value="SB">Solomon Islands</option>
+        	<option value="SO">Somalia</option>
+        	<option value="ZA">South Africa</option>
+        	<option value="GS">South Georgia and the South Sandwich Islands</option>
+        	<option value="SS">South Sudan</option>
+        	<option value="ES">Spain</option>
+        	<option value="LK">Sri Lanka</option>
+        	<option value="SD">Sudan</option>
+        	<option value="SR">Suriname</option>
+        	<option value="SJ">Svalbard and Jan Mayen</option>
+        	<option value="SZ">Swaziland</option>
+        	<option value="SE">Sweden</option>
+        	<option value="CH">Switzerland</option>
+        	<option value="SY">Syrian Arab Republic</option>
+        	<option value="TW">Taiwan, Province of China</option>
+        	<option value="TJ">Tajikistan</option>
+        	<option value="TZ">Tanzania, United Republic of</option>
+        	<option value="TH">Thailand</option>
+        	<option value="TL">Timor-Leste</option>
+        	<option value="TG">Togo</option>
+        	<option value="TK">Tokelau</option>
+        	<option value="TO">Tonga</option>
+        	<option value="TT">Trinidad and Tobago</option>
+        	<option value="TN">Tunisia</option>
+        	<option value="TR">Turkey</option>
+        	<option value="TM">Turkmenistan</option>
+        	<option value="TC">Turks and Caicos Islands</option>
+        	<option value="TV">Tuvalu</option>
+        	<option value="UG">Uganda</option>
+        	<option value="UA">Ukraine</option>
+        	<option value="AE">United Arab Emirates</option>
+        	<option value="GB">United Kingdom</option>
+        	<option value="US">United States</option>
+        	<option value="UM">United States Minor Outlying Islands</option>
+        	<option value="UY">Uruguay</option>
+        	<option value="UZ">Uzbekistan</option>
+        	<option value="VU">Vanuatu</option>
+        	<option value="VE">Venezuela, Bolivarian Republic of</option>
+        	<option value="VN">Viet Nam</option>
+        	<option value="VG">Virgin Islands, British</option>
+        	<option value="VI">Virgin Islands, U.S.</option>
+        	<option value="WF">Wallis and Futuna</option>
+        	<option value="EH">Western Sahara</option>
+        	<option value="YE">Yemen</option>
+        	<option value="ZM">Zambia</option>
+        	<option value="ZW">Zimbabwe</option>
+        </select>
+        <input type="email" name="Email" placeholder="Email">
+        <input type="tel" name="Phone" placeholder="Phone">
+        <select name="Account">
+          <option hidden>Account Type</option>
+          <option value="zulu">ZuluTrade</option>
+          <option value="real">Real</option>
+          <option value="demo">Demo</option>
+        </select>
+        <button type="submit" name="Open">Open Account</button>
+      </form>
+    </div>
+  </section>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__box"></div>
+      <div class="payment__box"></div>
+      <div class="payment__box"></div>
+      <div class="payment__box"></div>
+      <div class="payment__box"></div>
+      <div class="payment__box"></div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__flex">
+        <ul class="footer__ul">
+          <li>
+            <img class="footer__logo" src="img/logo-w.svg" alt="Forex24 Global">
+          </li>
+          <li>
+            <a class="footer__callme" href="#">Call me</a>
+          </li>
+          <li class="footer__social">
+            <a class="footer__link  footer__link--fb" href="#"></a>
+            <a class="footer__link  footer__link--li" href="#"></a>
+            <a class="footer__link  footer__link--gp" href="#"></a>
+            <a class="footer__link  footer__link--tw" href="#"></a>
+          </li>
+        </ul>
+        <ul class="footer__ul  footer__ul--links">
+          <li><b>About</b></li>
+          <li><hr></li>
+          <li><a href="#">Licenses & Regulations</a></li>
+          <li><a href="#">Security Of Funds</a></li>
+          <li><a href="#">STP Broker</a></li>
+          <li><a href="#">Legal Documents</a></li>
+          <li><a href="#">KIDs</a></li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+        <ul class="footer__ul  footer__ul--links">
+          <li><b>Trading</b></li>
+          <li><hr></li>
+          <li><a href="#">Account Types</a></li>
+          <li><a href="#">Account Comparison</a></li>
+          <li><a href="#">Product Spesification</a></li>
+          <li><a href="#">Trading Spesification</a></li>
+          <li><a href="#">Platforms</a></li>
+          <li><a href="#">Funding and Withdrawal</a></li>
+          <li><a href="#">Announcements</a></li>
+        </ul>
+        <ul class="footer__ul  footer__ul--links">
+          <li><b>Resources</b></li>
+          <li><hr></li>
+          <li><a href="#">Glossary</a></li>
+          <li><a href="#">Tools</a></li>
+        </ul>
+        <ul class="footer__ul  footer__ul--links">
+          <li><b>Contacts</b></li>
+          <li><hr></li>
+          <li>Customer Service<br>CY Number: +35725000199</li><br>
+          <li>Support<br>Support@forex24.com<br>UK Number: +442080891644</li>
+        </ul>
+      </div>
+        <hr class="footer__hr">
+      <b class="footer__name">Risk warning:</b>
+      <p class="footer__text">Trading in Contracts for Difference (‘CFDs’) carries a high level of risk and can result in the loss of all your investment. As such, CFDs may not be appropriate for all investors. You should not invest money that you cannot afford to lose. Before deciding to trade, you should become aware of all the risks associated with CFD trading, and seek advice from an independent and suitably licensed financial advisor. Under no circumstances shall we have any liability to any person or entity for (a) any loss or damage in whole or part caused by, resulting from, or relating to any transactions related to CFDs or (b) any direct, indirect, special, consequential or incidental damages whatsoever. For more information about the risks associated with trading CFDs please find and read our <a href="#">‘General Risk Disclosure’</a>.</p>
+      <p class="footer__text">Forex24 Global does not provide services to residents of the USA, Canada, Japan, North Korea, Iran, Belgium and some other regions.</p>
+        <hr class="footer__hr">
+      <p class="footer__text">© 2018 All rights reserved LYDYA FINANCIAL LTD.</p>
+      <p class="footer__text">Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
+      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
+      <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
+    </div>
+  </footer>
 </body>
 </html>
