--- a/mb/training/indicators.html
+++ b/mb/training/indicators.html
@@ -84,27 +84,148 @@
     </header>
     <div class="container">
       <div class="indicators__flex">
-        <div class="indocators__box">
-          <img src="../img/indicators-img" alt="">
-          <b>Канал Дончиана – полезное дополнение к любой ТС</b>
-          <p>Тип: Трендовые <span></span></p>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
         </div>
-        <div class="indocators__box">
-          <img src="../img/indicators-img" alt="">
-          <b>Канал Дончиана – полезное дополнение к любой ТС</b>
-          <p>Тип: Трендовые <span></span></p>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
         </div>
-        <div class="indocators__box">
-          <img src="../img/indicators-img" alt="">
-          <b>Канал Дончиана – полезное дополнение к любой ТС</b>
-          <p>Тип: Трендовые <span></span></p>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
         </div>
-        <div class="indocators__box">
-          <img src="../img/indicators-img" alt="">
-          <b>Канал Дончиана – полезное дополнение к любой ТС</b>
-          <p>Тип: Трендовые <span></span></p>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
         </div>
       </div>
+      <div class="indicators__flex  indicators__flex--second">
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+      </div>
+      <ul class="indicators__pagination">
+        <li><a href="#"><</a></li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">></a></li>
+      </ul>
+    </div>
+  </section>
+  <section class="indicators">
+    <header>
+      <div class="container">
+        <h2>Осцилляторы</h2>
+      </div>
+    </header>
+    <div class="container">
+      <div class="indicators__flex">
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+      </div>
+      <div class="indicators__flex  indicators__flex--second">
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/indicators-img.jpg" alt="">
+          <div class="indicators__content">
+            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <p>Тип: Трендовые <span></span></p>
+          </div>
+        </div>
+      </div>
+      <ul class="indicators__pagination">
+        <li><a href="#"><</a></li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">></a></li>
+      </ul>
     </div>
   </section>
   <footer class="footer">
