--- a/mb/index.html
+++ b/mb/index.html
@@ -51,7 +51,7 @@
               <li><a href="#">Юридическая информация</a></li>
             </ul>
           </div> -->
-          <ul class="nav__list">
+          <ul class="nav__list  nav__list--main">
             <li><a class="button  button--blue" href="#">Вход</a></li>
             <li><a class="button  button--blue" href="#">Регистрация</a></li>
             <!-- <li></li> -->
